# earnings-event-vol

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  SPEC.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
.serena/: project.yml
.serena/memories/: audit_status.md  audit_status_2026-06-03.md  completion_checklist.md  current_state_and_caveats.md  project_overview.md  research_status.md  research_status_2026-05-12.md  style_and_conventions.md  suggested_commands.md  tech_stack_and_structure.md
config/: backtest.yaml  data_sources.yaml  features.yaml  study.yaml
docs/: development_audit_prompt.md  future_work.md  index.md  manuscript_audit_prompt.md  optimization_roadmap_zh.md  paper_plan.md  research_overview.md  results_snapshot.md  spec.md  technical_overview_zh.md
scripts/: build_pilot_panel.py  build_trade_proxy_panel.py
src/earnings_event_vol/: __init__.py  __main__.py  backtest.py  cli.py  config.py  contract_reference.py  data_audit.py  data_pipeline.py  earnings_calendar.py  event_panel.py  event_targets.py  event_window_panel.py  events.py  features.py  leakage_audit.py  market_covariates.py  market_index_proxy.py  massive.py  metrics.py  models.py  quote_execution.py  rate_limit.py  research.py  schemas.py  trade_proxy.py  universe.py  variance.py
tests/: test_feature_helpers.py  test_project_identity.py  test_protocol.py  test_quote_execution.py  test_rate_limit.py  test_research_source_contracts.py
tests/fixtures/: earnings_calendar.csv  event_prices.csv  features_clean.csv  ivar_input.csv  option_quotes.csv  signals.csv  trade_legs.csv  underlying_bars.csv
